# JarvisAgent

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  index.html  index.html.backup  index.html.optimized.backup  monitor.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src-tauri/: .taurignore  Cargo.toml  PROJECT_STRUCTURE.md  intent_rules.json  model_registry.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompt/: prompt-1.0.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: checkpoint.rs  config.rs  history.rs  history_types.rs  merge.rs  mod.rs  permission.rs  sandbox.rs  session.rs  snapshot.rs  window_state.rs
src-tauri/src/core/: adapters.rs  agent.rs  agent_runs.rs  api_client.rs  api_format.rs  background.rs  cancellation.rs  checkpoint.rs  config.rs  constants.rs  data_paths.rs  debug_logger.rs  error.rs  events.rs  intent.rs  intent_rules.rs  memory.rs  mod.rs  models.rs  prompts.rs  registry.rs  sessions.rs  state.rs  subagents.rs  tasks.rs  traits.rs
src-tauri/src/core/agent/: context.rs  mod.rs  pipeline.rs  prompts.rs  stream.rs  tools_runner.rs
src-tauri/src/core/commands/: checkpoint.rs  config.rs  history.rs  history_types.rs  merge.rs  mod.rs  permission.rs  sandbox.rs  session.rs  snapshot.rs  window_state.rs
src-tauri/src/core/db/: mod.rs  schema.rs
src-tauri/src/core/infra/: background.rs  debug_logger.rs  mod.rs  prompts.rs
src-tauri/src/core/intent/: mod.rs  plan_detector.rs  rules.rs
src-tauri/src/core/llm/: adapters.rs  api_client.rs  mod.rs  (+2 more)
src-tauri/src/infra/: background.rs  debug_logger.rs  mod.rs
(+285 files in other folders)
