[package]
name = "jarvisagent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jarvisagent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] } # 相当于 Java 的 HttpClient
tokio = { version = "1", features = ["full"] }    # Rust 的异步运行时
eventsource-stream = "0.2"                       # 用于解析 SSE (Server-Sent Events) 流
futures-util = "0.3"                             # 用于处理异步 Stream
uuid = { version = "1.23.1", features = ["v4"] }
base64 = "0.22"
chrono = "0.4.44"
tokio-util = "0.7"                               # 提供 CancellationToken 用于取消机制
regex = "1"                                         # 用于意图分类规则匹配
thiserror = "1"                                     # 用于派生 Error trait
async-trait = "0.1"                                   # 用于 async trait 抽象
similar = "2"                                          # 用于生成文本 diff


